--- a/src/main/resources/templates/user/registro.html
+++ b/src/main/resources/templates/user/registro.html
@@ -1,3 +1,6 @@
+<div th:if="${error}" class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4" role="alert">
+    <span th:text="${error}"></span>
+</div>
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
