--- a/src/main/resources/templates/user/perfil.html
+++ b/src/main/resources/templates/user/perfil.html
@@ -71,10 +71,10 @@
                                     class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all duration-200"
                                 >
                                     <option value="">Selecciona tu especialidad</option>
-                                    <option value="CAMPO">PRINCIPAL</option>
-                                    <option value="MESA">ASISTENTE</option>
-                                    <option value="MESA">CRONOMETRISTA</option>
-                                    <option value="MESA">ANOTADOR</option>
+                                    <option value="PRINCIPAL">PRINCIPAL</option>
+                                    <option value="ASISTENTE">ASISTENTE</option>
+                                    <option value="CRONOMETRISTA">CRONOMETRISTA</option>
+                                    <option value="ANOTADOR">ANOTADOR</option>
                                 </select>
                             </div>
 
